--- a/site/templates/twig/mar/armain/cmm/edit/form.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ input.paginateUrl(1) }}" method="POST" id="customer-form" data-id="{{ customer.id }}">
+<form action="{{ input.paginateUrl(1) }}" method="POST" id="cmm-form" data-id="{{ customer.id }}">
 	<input type="hidden" name="action" value="update">
 
 	<div class="row">
