--- a/site/templates/twig/mar/armain/cmm/edit/form/salesrep.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/salesrep.twig
@@ -19,7 +19,7 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search Warehouses',
+							'title': 'Search Sales Reps',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
 							'data-lookupurl': page.searchLookupUrl('mar/spm'),
