--- a/site/templates/twig/code-tables/mpo/cnfm/js/classes.js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/js/classes.js.twig
@@ -1,5 +1,5 @@
-{% include 'code-tables/mpo/cnfm/js/classes/Configs.js.twig' %}
+{% include 'code-tables/js/classes/Alerts.js.twig' %}
+{% include 'code-tables/js/classes/Inputs.js.twig' %}
+{% include 'code-tables/js/classes/Form.js.twig' %}
+{% include 'code-tables/js/classes/Configs.js.twig' with {'manager': cnfm} %}
 {% include 'code-tables/mpo/cnfm/js/classes/Requests.js.twig' %}
-{% include 'code-tables/mpo/cnfm/js/classes/Alerts.js.twig' %}
-{% include 'code-tables/mpo/cnfm/js/classes/Inputs.js.twig' %}
-{% include 'code-tables/mpo/cnfm/js/classes/Form.js.twig' %}
