--- a/site/templates/twig/code-tables/form.twig
+++ b/site/templates/twig/code-tables/form.twig
@@ -6,7 +6,7 @@
 #}
 
 {# data-code is for verifying edit vs new #}
-<form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form" data-code="">
+<form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="POST" id="code-form" data-code="">
 	<input type="hidden" name="action" value="update">
 
 	<div class="form-group">
