--- a/site/templates/twig/code-tables/mar/ctm/list.twig
+++ b/site/templates/twig/code-tables/mar/ctm/list.twig
@@ -1,5 +1,6 @@
-{# codes is an array / ObjectCollection of CustomerTypeCode #}
-<div class="list-group">
+{% extends 'code-tables/list.twig' %}
+
+{% block header_div %}
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
 			<div class="col-1">
@@ -28,59 +29,59 @@
 			</div>
 			<div class="col-2">
 				{% if page.is_print() == false %}
-					<a href="{{ page.url ~ '?code=new' }}" class="btn btn-light btn-sm">
+					<a href="{{ page.codeAddUrl() }}" class="btn btn-light btn-sm">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
 					</a>
 				{% endif %}
 			</div>
 		</div>
 	</div>
-	{% for code in codes %}
-		{# data-code attribute and class code is for the highlight on close #}
-		<div id="{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.has_success() ) ? 'bg-success text-white' : ''}}">
-			<div class="row align-items-center">
-				<div class="col-1">
-					{{ code.code }}
-				</div>
-				<div class="col-3">
-					{{ code.description }}
-				</div>
-				<div class="col-1">
-					{{ code.mail_list }}
-				</div>
-				<div class="col-1">
+{% endblock %}
 
-				</div>
-				<div class="col-1">
-					{{ code.count_notetype('SCTP') ? 'Y' : 'N' }}
-				</div>
-				<div class="col-1">
-					{{ code.count_notetype('ICTP') ? 'Y' : 'N' }}
-				</div>
-				<div class="col-1">
-					{{ code.count_notetype('PCTP') ? 'Y' : 'N' }}
-				</div>
-				<div class="col-1">
-					{{ code.count_notetype('KCTP') ? 'Y' : 'N' }}
-				</div>
-				<div class="col-2 text-center">
-					{% if recordlocker.function_locked(page.name, code.code) == false or recordlocker.function_locked_by_user(page.name, code.code) %}
-						{% if page.is_print() == false %}
-							<a href="{{ page.get_codetable_code_editURL(page.codetable, code.code) }}" class="btn btn-warning btn-sm" title="Edit" aria-label="Edit">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp;
-							<a href="{{ page.get_codetable_code_deleteURL(page.codetable, code.code) }}" class="btn btn-danger btn-sm delete_button" title="Delete" aria-label="Delete">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% endif %}
-					{% else %}
-						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ recordlocker.get_locked_user(page.name, code.code) }}
-						</span>
+{% for code in codes %}
+	{% block code_row %}
+		<div class="row align-items-center">
+			<div class="col-1">
+				{{ code.code }}
+			</div>
+			<div class="col-3">
+				{{ code.description }}
+			</div>
+			<div class="col-1">
+				{{ code.mail_list }}
+			</div>
+			<div class="col-1">
+
+			</div>
+			<div class="col-1">
+				{{ code.count_notetype('SCTP') ? 'Y' : 'N' }}
+			</div>
+			<div class="col-1">
+				{{ code.count_notetype('ICTP') ? 'Y' : 'N' }}
+			</div>
+			<div class="col-1">
+				{{ code.count_notetype('PCTP') ? 'Y' : 'N' }}
+			</div>
+			<div class="col-1">
+				{{ code.count_notetype('KCTP') ? 'Y' : 'N' }}
+			</div>
+			<div class="col-2 text-center">
+				{% if recordlocker.function_locked(page.name, code.code) == false or recordlocker.function_locked_by_user(page.name, code.code) %}
+					{% if page.is_print() == false %}
+						<a href="{{ page.codeEditUrl(code.code) }}" class="btn btn-warning btn-sm" title="Edit" aria-label="Edit">
+							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+						</a>
+						&nbsp;
+						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button" title="Delete" aria-label="Delete">
+							<i class="fa fa-trash" aria-hidden="true"></i> Delete
+						</a>
 					{% endif %}
-				</div>
+				{% else %}
+					<span class="badge badge-secondary">
+						<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ recordlocker.get_locked_user(page.name, code.code) }}
+					</span>
+				{% endif %}
 			</div>
 		</div>
-	{% endfor %}
-</div>
+	{% endblock %}
+{% endfor %}
