--- a/site/templates/twig/code-tables/optm/bread-crumbs.twig
+++ b/site/templates/twig/code-tables/optm/bread-crumbs.twig
@@ -17,7 +17,7 @@
 			</a>
 		</li>
 		<li class="breadcrumb-item active" aria-current="page">
-			{{ input.urlSegmentLast()|upper }}
+			<i class="fa fa-microchip" aria-hidden="true"></i> {{ input.urlSegmentLast()|upper }}
 		</li>
 	{% endif %}
 
