--- a/site/templates/twig/items/vxm/bread-crumbs.twig
+++ b/site/templates/twig/items/vxm/bread-crumbs.twig
@@ -12,20 +12,20 @@
 	{% if values.offsetExists('vendorID') %}
 		<li class="breadcrumb-item">
 			<a href="{{ page.vendorListUrl(values.text('vendorID')) }}">
-				<i class="fa fa-arrows" aria-hidden="true"></i> VXM
+				<i class="fa fa-microchip" aria-hidden="true"></i> VXM
 			</a>
 		</li>
 		{% if (values.offsetExists('vendoritemID')) %}
 			<li class="breadcrumb-item">
-				<a href="{{ page.vendorUrl(values.text('vendorID')) }}">Vendor: {{ values.text('vendorID') }}</a>
+				<a href="{{ page.vendorUrl(values.text('vendorID')) }}">{{ values.text('vendorID') }}</a>
 			</li>
 			{% if values.text('vendoritemID') == 'new' %}
-				<li class="breadcrumb-item active" aria-current="page">New Item X-Ref</li>
+				<li class="breadcrumb-item active" aria-current="page">New X-Ref</li>
 			{% else %}
-				<li class="breadcrumb-item active" aria-current="page">X-Ref Item: {{ values.text('vendoritemID') }}</li>
+				<li class="breadcrumb-item active" aria-current="page">{{ values.text('vendoritemID') }}</li>
 			{% endif %}
 		{% else %}
-			<li class="breadcrumb-item active" aria-current="page">Vendor: {{ values.text('vendorID') }}</li>
+			<li class="breadcrumb-item active" aria-current="page">{{ values.text('vendorID') }}</li>
 		{% endif %}
 	{% elseif values.offsetExists('itemID') %}
 		<li class="breadcrumb-item">
@@ -33,8 +33,15 @@
 				<i class="fa fa-list" aria-hidden="true"></i> APMAIN
 			</a>
 		</li>
-		<li class="breadcrumb-item active" aria-current="page">Item: {{ values.text('itemID') }}</li>
+		<li class="breadcrumb-item">
+			<a href="{{ page.vendorListUrl('') }}">
+				<i class="fa fa-microchip" aria-hidden="true"></i> VXM
+			</a>
+		</li>
+		<li class="breadcrumb-item active" aria-current="page">{{ values.text('itemID') }}</li>
 	{% else %}
-		<li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+		<li class="breadcrumb-item active" aria-current="page">
+			<i class="fa fa-microchip" aria-hidden="true"></i> VXM
+		</li>
 	{% endif %}
 {% endblock %}
