--- a/site/templates/twig/items/cxm/search/customer/form.twig
+++ b/site/templates/twig/items/cxm/search/customer/form.twig
@@ -1,12 +1,10 @@
-<form action="{{ page.url }}" method="get" class="allow-enterkey-submit">
-	<div class="form-group">
-		<div class="input-group">
-			<input class="form-control form-group inline" type="text" name="q" value="" id="custID" placeholder="Search Customers by ID, Name, City, State, Zip" autofocus>
-			<span class="input-group-btn">
-				<button type="submit" class="btn btn-default">
-					<i class="fa fa-search"></i> <span class="sr-only">Search</span>
-				</button>
-			</span>
-		</div>
+<form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="GET" class="allow-enterkey-submit">
+	<div class="input-group">
+		<input class="form-control form-group inline" type="text" name="q" value="{{ input.get.text('q') }}" id="custID" placeholder="Search Customers by ID, Name, City, State, Zip" autofocus>
+		<span class="input-group-btn">
+			<button type="submit" class="btn btn-light">
+				<i class="fa fa-search"></i> <span class="sr-only">Search</span>
+			</button>
+		</span>
 	</div>
 </form>
