--- a/site/templates/twig/items/cxm/bread-crumbs.twig
+++ b/site/templates/twig/items/cxm/bread-crumbs.twig
@@ -12,17 +12,17 @@
 	{% if values.offsetExists('custID') %}
 		<li class="breadcrumb-item">
 			<a href="{{ page.custListUrl(values.text('custID')) }}">
-				<i class="fa fa-arrows" aria-hidden="true"></i> CXM
+				<i class="fa fa-microchip" aria-hidden="true"></i> CXM
 			</a>
 		</li>
 		{% if (values.offsetExists('custitemID')) %}
 			<li class="breadcrumb-item">
-				<a href="{{ page.custUrl(values.text('custID')) }}">{{ values.text('custID') }}</a>
+				<a href="{{ page.xrefExitUrl(xref) }}">{{ values.text('custID') }}</a>
 			</li>
 			{% if values.text('custitemID') == 'new' %}
 				<li class="breadcrumb-item active" aria-current="page">Create X-ref</li>
 			{% else %}
-				<li class="breadcrumb-item active" aria-current="page">X-Ref: {{ values.text('custitemID')}}</li>
+				<li class="breadcrumb-item active" aria-current="page">{{ values.text('custitemID')}}</li>
 			{% endif %}
 		{% else %}
 			{% if values.offsetExists('custID') %}
@@ -31,10 +31,12 @@
 		{% endif %}
 	{% elseif values.text('itemID') %}
 		<li class="breadcrumb-item">
-			<a href="{{ page.url }}">{{ page.title }}</a>
+			<a href="{{ page.url }}">CXM</a>
 		</li>
-		<li class="breadcrumb-item active" aria-current="page">Item: {{ values.text('itemID')}}</li>
+		<li class="breadcrumb-item active" aria-current="page">{{ values.text('itemID')}}</li>
 	{% else %}
-		<li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+		<li class="breadcrumb-item active" aria-current="page">
+			<i class="fa fa-microchip" aria-hidden="true"></i> CXM
+		</li>
 	{% endif %}
 {% endblock %}
