--- a/site/templates/twig/items/cxm/xref/form/display.twig
+++ b/site/templates/twig/items/cxm/xref/form/display.twig
@@ -12,13 +12,14 @@
 			<div class="col-sm-2">
 				<strong> {{ page.pw_template == 'itm' ? 'Item ID' : 'Customer ID' }}</strong>
 			</div>
-			<div class="col-sm-6">
-				<div>
-					{% if page.pw_template == 'itm' %}
-						{{ item.itemid }} - {{ item.item.description }}
-					{% else %}
-						{{ item.custID }} - {{ item.customer.name }}
-					{% endif %}
+			<div class="col-sm-4">
+				<div class="d-flex justify-content-between">
+					<div>
+						{{ page.pw_template == 'itm' ? item.itemid : item.custid }}
+					</div>
+					<div>
+						{{ page.pw_template == 'itm' ? item.item.description : item.customer.name }}
+					</div>
 				</div>
 			</div>
 		</div>
