--- a/site/templates/twig/items/mxrfe/display.twig
+++ b/site/templates/twig/items/mxrfe/display.twig
@@ -6,14 +6,17 @@
 	{% block header %}
 		<div class="card-header">
 			<div class="row">
-				<div class="col-sm-3">
-					<strong>Mnfr / Comp ID:</strong> {{ vendor.vendorid }}
+				<div class="col-sm-2">
+					<strong>Mnfr / Comp ID:</strong>
 				</div>
-				<div class="col-sm-6">
-					<div>
-						<small>{{ vendor.name }}</small><br>
-						<small></small>
-					</div>
+				<div class="col-sm-4">
+					 <div class="d-flex justify-content-between">
+					 	{{ vendor.vendorid }}
+						<div>
+							<small>{{ vendor.name }}</small><br>
+							<small></small>
+						</div>
+					 </div>
 				</div>
 			</div>
 		</div>
