--- a/site/templates/twig/items/vxm/xref/form/display.twig
+++ b/site/templates/twig/items/vxm/xref/form/display.twig
@@ -22,12 +22,9 @@
 						<strong> {{ page.pw_template == 'itm' ? 'Item ID' : 'Vendor ID' }}</strong>
 					</div>
 					<div class="col-sm-8">
-						<div>
-							{% if page.pw_template == 'itm' %}
-								{{ item.itemid }} - {{ item.item.description }}
-							{% else %}
-								{{ item.vendorid }} - {{ item.vendor.name }}
-							{% endif %}
+						<div class="d-flex justify-content-between">
+							<div>{{ page.pw_template == 'itm' ? item.itemid : item.vendorid }}</div>
+							<div>{{ page.pw_template == 'itm' ? item.item.description : item.vendor.name  }}</div>
 						</div>
 					</div>
 				</div>
